--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,5 +1,6 @@
 {
   "name": "personal-portfolio",
+  "homepage": "https://main.d38a87k4d68kem.amplifyapp.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
